Fix: Change overflow setting to improve chrome
* Overflow setting changed so that chrome browser do not show scroll
  bars everywere

Changes to be committed:
	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
   hyphens: auto;
 }
 
